fix nav visibility/add video demo

--- a/theme/static_src/src/styles.css
+++ b/theme/static_src/src/styles.css
@@ -102,7 +102,7 @@
 }
 
 .link-decor-lg:hover:before {
-    top: -2px;
+    top: -4px;
     left: -6px;
     opacity: 1;
     width: 30px;
@@ -110,7 +110,7 @@
 }
 
 .link-decor-sm:hover:before {
-    top: -3px;
+    top: 0;
     left: -6px;
     opacity: 1;
     width: 24px;
